# FormalLanguagesPracticum

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  code_coverage.info  create_code_coverege_html.sh  main.cpp  tests.cpp
AutomataLibrary/: Automate.cpp  Automate.hpp  CMakeLists.txt  State.cpp  State.hpp
